--- a/src/app/components/car/car.component.css
+++ b/src/app/components/car/car.component.css
@@ -1,3 +1,18 @@
 button {
     margin-right: 10px;
 }
+#option{
+    margin-bottom: 10px;
+}
+.btn-sm{
+    font-size: 0.8em;
+    padding: 5px;
+    line-height: 8px;
+
+}
+.form-control{
+    margin-top: 10px;
+}
+.container{
+    margin-bottom: 50px;
+}
