Added another component called Contacts. Added routing using RouterModule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-car></app-car> 
+<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+    <span class="fs-4" routerLink="/">Car album</span>
+    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+      <a class="me-3 py-2 link-body-emphasis text-decoration-none" routerLink="/">Main</a>
+      <a class="me-3 py-2 link-body-emphasis text-decoration-none" routerLink="/about">Contacts</a>
+      <button type="button" class="btn btn-outline-primary">LogIn</button>
+    </nav>
+  </div>
+<router-outlet></router-outlet> 
